# chess

./: .gitignore  README.md
.github/workflows/: main.yml
chessai/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  chessai  chessai.cpp  cmake_install.cmake  evaluator.pt  evaluator_optimiser.pt  plot.py  temp
gamefiles/: README  chess.gamefile  example.gamefile  test.gamefile
img/chess/: empty.png~
src/elements/: .gitignore  Makefile  README.md  board.cpp  board.h  chessgame.cpp  chessgame.h  cpbishop.cpp  cpbishop.h  cpking.cpp  cpking.h  cpknight.cpp  cpknight.h  cppawn.cpp  cppawn.h  cpqueen.cpp  cpqueen.h  cprook.cpp  cprook.h  game.cpp  game.h  piece.cpp  piece.h  player.cpp  player.h  rungame  rungame.cpp  rungame.h  square.cpp  square.h
src/gui/: .gitignore  Makefile  chessgamerunner.cpp  chessgamerunner.h  chesspiecebitmap.cpp  chesspiecebitmap.h  chesssquarepanel.cpp  chesssquarepanel.h  gameframe.cpp  gameframe.h  gamerunner.cpp  gamerunner.h  piecebitmap.cpp  piecebitmap.h  temp  test.cpp
src/parser/: .gitignore  Makefile  gameparser.cpp  gameparser.h  guiparser.cpp  guiparser.h  moveparser.cpp  moveparser.h  parse.cpp  parse.h  parserutils.cpp  parserutils.h  pieceparser.cpp  pieceparser.h  promotionparser.cpp  promotionparser.h  runnerparser.cpp  runnerparser.h  trackerupdateparser.cpp  trackerupdateparser.h
test/: testutil.h
test/elements/: .gitignore  Makefile  boardtest.cpp  boardtest.h  chesspiecestest.cpp  chesspiecestest.h  elementstestrunner.cpp  elementstestrunner.h  squaretest.cpp  squaretest.h
test/parser/: Makefile  (+14 more)
(+34 files in other folders)
